--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/skaji/setup-raku.git"
+    "url": "git+https://github.com/Raku/setup-raku.git"
   },
   "keywords": [
     "actions",
