--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.9.1",
-    "@actions/exec": "^1.0.3",
-    "@actions/github": "^1.1.0",
-    "@actions/http-client": "^1.0.6",
-    "@actions/io": "^1.0.2",
-    "@actions/tool-cache": "^1.5.4",
-    "semver": "^6.1.1"
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.0.3",
+    "@actions/http-client": "^2.0.1",
+    "@actions/io": "^1.1.2",
+    "@actions/tool-cache": "^2.0.1",
+    "semver": "^7.3.7"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.4",
-    "@types/semver": "^6.0.0",
-    "@zeit/ncc": "^0.21.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.7.1",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.8.3"
+    "@types/jest": "^28.1.7",
+    "@types/node": "^18.7.6",
+    "@types/semver": "^7.3.12",
+    "@vercel/ncc": "^0.34.0",
+    "jest": "^28.1.3",
+    "jest-circus": "^28.1.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.7.4"
   }
 }
