--- a/package.json
+++ b/package.json
@@ -23,23 +23,22 @@
   "author": "Raku community",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^6.0.0",
-    "@actions/http-client": "^2.1.1",
+    "@actions/http-client": "^2.2.3",
     "@actions/io": "^1.1.3",
-    "@actions/tool-cache": "^2.0.2",
-    "semver": "^7.5.4"
+    "@actions/tool-cache": "^2.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.8",
-    "@types/node": "^20.5.9",
-    "@types/semver": "^7.5.1",
-    "@vercel/ncc": "^0.36.1",
-    "jest": "^28.1.3",
-    "jest-circus": "^28.1.3",
-    "prettier": "^2.8.8",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.9.5"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.0",
+    "@vercel/ncc": "^0.38.3",
+    "jest": "^30.0.5",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": ">=24"
   }
 }
